# s21_maze

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: example_2.txt
src/app/: Main.qml  main.cpp
src/app/resources/: resources.qrc
src/app/ui-gui/: Main.qml  main.cpp
src/app/ui-gui/windows/: MazeWindow.qml  StartWindow.qml
src/app/utils/: MazeWidget.qml  SelectRowColDialog.qml  StatusDialog.qml  TextButton.qml
src/app/windows/: MazeWindow.qml  StartWindow.qml
src/lib/model/: maze.cpp  maze.h
src/lib/service/generator/: generator.cpp  generator.h
src/lib/service/ioParser/: asyncIOParser.cpp  asyncIOParser.h
src/lib/service/solver/: solver.cpp  solver.h
tests/: CMakeLists.txt  test_generator.cpp  test_solver.cpp
